--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calculator-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://4stein.github.io/react-calculator/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
